Melhorias Notebooks Jupyter

--- a/TPC3/Notebook TPC3.ipynb
+++ b/TPC3/Notebook TPC3.ipynb
@@ -1,21 +1,41 @@
 {
   "cells": [
     {
-      "attachments": {},
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "colab_type": "text",
+        "id": "view-in-github"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/joaoabreu5/PL-TPCs/blob/main/TPC3/Notebook%20TPC3.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gVKgu2DIi9fv"
+      },
       "source": [
         "# TPC3: Processador de Pessoas listadas nos Róis de Confessados\n",
         "\n",
-        "Construa agora um ou vários programas Python para processar o texto 'processos.txt' (procurar o ficheiro no Bb) com o intuito de calcular frequências de alguns elementos (a ideia é utilizar arrays associativos, dicionáriosem Python, para o efeito) conforme solicitado a seguir:\n",
-        "\n",
+        "Construa agora um ou vários programas Python para processar o texto 'processos.txt' (procurar o ficheiro no BB) com o intuito de calcular frequências de alguns elementos (a ideia é utilizar arrays associativos, dicionáriosem Python, para o efeito) conforme solicitado a seguir."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "N1VT73XJnUer"
+      },
+      "source": [
         "### Bibliotecas importadas"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "otARGlOzi9fy"
+      },
       "outputs": [],
       "source": [
         "import re\n",
@@ -24,25 +44,29 @@
       ]
     },
     {
-      "attachments": {},
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "L0M9a-Xbi9f0"
+      },
       "source": [
         "### Funções auxiliares para impressão de distribuições"
       ]
     },
     {
-      "attachments": {},
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "pHqiEEkbi9f0"
+      },
       "source": [
-        "Alíneas a) e c)"
+        "##### Alíneas **a)** e **c)**"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "LaBuhTuoi9f1"
+      },
       "outputs": [],
       "source": [
         "def print_distribuicao(table_title, table_fields, data):\n",
@@ -53,7 +77,7 @@
         "    total = sum(data.values())\n",
         "    for key in data:\n",
         "        percentage = data[key] / total * 100\n",
-        "        \n",
+        "\n",
         "        precision = 2\n",
         "        while round(percentage, precision) == 0.00:\n",
         "            precision += 1\n",
@@ -64,73 +88,78 @@
       ]
     },
     {
-      "attachments": {},
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "KJAAQlKTi9f1"
+      },
       "source": [
-        "Alínea b)"
+        "##### Alínea **b)**"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "faF7bhKsi9f2"
+      },
       "outputs": [],
       "source": [
         "def print_top5_nomes_por_seculo(table_title, table_fields, data):\n",
         "    for seculo in data:\n",
-        "        if len(data[seculo]) > 0:    \n",
+        "        if len(data[seculo]) > 0:\n",
         "            table = PrettyTable()\n",
         "            table.title = table_title + \" \" + str(seculo)\n",
         "            table.field_names = table_fields\n",
-        "            \n",
+        "\n",
         "            total = sum(data[seculo].values())\n",
         "            pos = 1\n",
         "            ref_value = None\n",
-        "            \n",
+        "\n",
         "            i = 0\n",
         "            for nome in data[seculo]:\n",
         "                freq = data[seculo][nome]\n",
-        "                \n",
+        "\n",
         "                if ref_value is None:\n",
         "                    ref_value = freq\n",
         "\n",
         "                elif freq < ref_value:\n",
         "                    pos = i+1;\n",
         "                    ref_value = freq\n",
-        "            \n",
+        "\n",
         "                if pos <= 5:\n",
         "                    percentage = freq / total * 100\n",
-        "                    \n",
+        "\n",
         "                    precision = 2\n",
         "                    while round(percentage, precision) == 0.00:\n",
         "                        precision += 1\n",
-        "                        \n",
+        "\n",
         "                    table.add_row([pos, nome, freq, '{:.{}f} %'.format(percentage, precision)])\n",
-        "                    \n",
+        "\n",
         "                else:\n",
         "                    break\n",
-        "                \n",
+        "\n",
         "                i+=1\n",
-        "                \n",
+        "\n",
         "            print(table)\n",
         "            print(\"\\n\", end='')"
       ]
     },
     {
-      "attachments": {},
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "nhwcKNhFi9f2"
+      },
       "source": [
         "### Programas implementados"
       ]
     },
     {
-      "attachments": {},
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "v7Yq-zxXi9f2"
+      },
       "source": [
-        "> a) Calcula a frequência de processos por ano (primeiro elemento da data);\n",
+        "##### **a)** Calcula a frequência de processos por ano (primeiro elemento da data).\n",
         "\n",
         "> Obs: ***Ficheiro 'TPC3_ExA.py'***"
       ]
@@ -138,7 +167,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "Ws-xGwKki9f3"
+      },
       "outputs": [],
       "source": [
         "def processos_ano():\n",
@@ -152,7 +183,7 @@
         "                proc_ano[ano] += 1\n",
         "            else:\n",
         "                proc_ano[ano] = 1\n",
-        "                \n",
+        "\n",
         "    file.close()\n",
         "    return dict(sorted(proc_ano.items(), key=lambda x: x[1], reverse=True))\n",
         "\n",
@@ -165,11 +196,12 @@
       ]
     },
     {
-      "attachments": {},
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "JL62mvbMi9f3"
+      },
       "source": [
-        "> b) Calcula a frequência de nomes próprios (o primeiro em cada nome) e apelidos (o ultimo em cada nome) por séculos e apresenta os 5 mais usados;\n",
+        "##### **b)** Calcula a frequência de nomes próprios (o primeiro em cada nome) e apelidos (o ultimo em cada nome) por séculos e apresenta os 5 mais usados.\n",
         "\n",
         "> Obs: ***Ficheiro 'TPC3_ExB.py'***"
       ]
@@ -177,18 +209,20 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "47PW_IYXi9f4"
+      },
       "outputs": [],
       "source": [
         "def nomes_e_apelidos():\n",
         "    file = open(\"processos.txt\", \"r\")\n",
         "    dict_pnomes = dict()\n",
         "    dict_apelidos = dict()\n",
-        "    \n",
+        "\n",
         "    for line in file:\n",
         "        m_ano = re.match(r\"\\d+::(?P<ano>\\d+)-\\d{2}-\\d{2}::([A-Z][a-z]*) ([A-Z][a-z]* ){0,}([A-Z][a-z]*)\", line)\n",
         "        fall_nomes = re.findall(r\"::([A-Z][a-z]*) ([A-Z][a-z]* ){0,}([A-Z][a-z]*)\", line)\n",
-        "        \n",
+        "\n",
         "        if m_ano is not None and fall_nomes is not None:\n",
         "            ano = int(m_ano.group('ano'))\n",
         "            seculo = (ano - 1) // 100 + 1\n",
@@ -197,7 +231,7 @@
         "            for match in fall_nomes:\n",
         "                primeiro_nome = match[0]\n",
         "                apelido = match[-1]\n",
-        "                \n",
+        "\n",
         "                if seculo in dict_pnomes:\n",
         "                    if primeiro_nome in dict_pnomes[seculo]:\n",
         "                        dict_pnomes[seculo][primeiro_nome] += 1\n",
@@ -206,7 +240,7 @@
         "                else:\n",
         "                    dict_pnomes[seculo] = dict()\n",
         "                    dict_pnomes[seculo][primeiro_nome] = 1\n",
-        "                    \n",
+        "\n",
         "                if seculo in dict_apelidos:\n",
         "                    if apelido in dict_apelidos[seculo]:\n",
         "                        dict_apelidos[seculo][apelido] += 1\n",
@@ -214,14 +248,14 @@
         "                        dict_apelidos[seculo][apelido] = 1\n",
         "                else:\n",
         "                    dict_apelidos[seculo] = dict()\n",
-        "                    dict_apelidos[seculo][apelido] = 1     \n",
-        "    \n",
+        "                    dict_apelidos[seculo][apelido] = 1\n",
+        "\n",
         "    file.close()\n",
-        "    \n",
+        "\n",
         "    dict_pnomes = dict(sorted(dict_pnomes.items(), reverse=True))\n",
         "    for seculo in dict_pnomes:\n",
         "        dict_pnomes[seculo] = dict(sorted(dict_pnomes[seculo].items(), key=lambda x: x[1], reverse=True))\n",
-        "    \n",
+        "\n",
         "    dict_apelidos = dict(sorted(dict_apelidos.items(), reverse=True))\n",
         "    for seculo in dict_apelidos:\n",
         "        dict_apelidos[seculo] = dict(sorted(dict_apelidos[seculo].items(), key=lambda x: x[1], reverse=True))\n",
@@ -235,11 +269,12 @@
       ]
     },
     {
-      "attachments": {},
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "PHBEBOn2i9f4"
+      },
       "source": [
-        "> c) Calcula a frequência dos vários tipos de relação: irmão, sobrinho, etc.;\n",
+        "##### **c)** Calcula a frequência dos vários tipos de relação: irmão, sobrinho, etc.\n",
         "\n",
         "> Obs: ***Ficheiro 'TPC3_ExC.py'***"
       ]
@@ -247,7 +282,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "k_OaDih3i9f4"
+      },
       "outputs": [],
       "source": [
         "def relacoes():\n",
@@ -257,18 +294,18 @@
         "    for line in file:\n",
         "        r = re.match(r\"\\d+::(?P<ano>\\d+)-\\d{2}-\\d{2}::([A-Z][a-z]*) ([A-Z][a-z]* ){0,}([A-Z][a-z]*)\", line)\n",
         "        fall_relacoes = re.findall(r\",([a-zA-z]+)((?: +[a-zA-z]+)*)\\. +Proc.\\d+\\.\", line)\n",
-        "        \n",
-        "        if r is not None:  \n",
+        "\n",
+        "        if r is not None:\n",
         "            for match in fall_relacoes:\n",
         "                rel = ''\n",
         "                for p in match:\n",
         "                    rel += p\n",
-        "                \n",
+        "\n",
         "                if rel in dict_relacoes:\n",
         "                    dict_relacoes[rel] += 1\n",
         "                else:\n",
         "                    dict_relacoes[rel] = 1\n",
-        "                        \n",
+        "\n",
         "    file.close()\n",
         "    return dict(sorted(dict_relacoes.items(), key=lambda x: x[1], reverse=True))\n",
         "\n",
@@ -278,11 +315,12 @@
       ]
     },
     {
-      "attachments": {},
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "tTj4p1Nri9f5"
+      },
       "source": [
-        "> d) Converta os 20 primeiros registos num novo ficheiro de output mas em formato **Json**.\n",
+        "##### **d)** Converta os 20 primeiros registos num novo ficheiro de output mas em formato **JSON**.\n",
         "\n",
         "> Obs: ***Ficheiro 'TPC3_ExD.py'***"
       ]
@@ -290,13 +328,15 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "ZAEp-Xgii9f5"
+      },
       "outputs": [],
       "source": [
         "def first_20_registers_to_json():\n",
         "    first_20_lines = []\n",
         "    nome_campos = ['id','data','nome','pai','mãe','observações']\n",
-        "    \n",
+        "\n",
         "    read_file = open(\"processos.txt\", \"r\")\n",
         "    for line in read_file:\n",
         "        r = re.match(r\"\\d+::(?P<ano>\\d+)-\\d{2}-\\d{2}::([A-Z][a-z]*) ([A-Z][a-z]* ){0,}([A-Z][a-z]*)\", line)\n",
@@ -306,27 +346,29 @@
         "            for i in range(6):\n",
         "                line_to_json[nome_campos[i]] = campos[i]\n",
         "            first_20_lines.append(line_to_json)\n",
-        "        \n",
+        "\n",
         "        if len(first_20_lines) >= 20:\n",
         "            break\n",
-        "    \n",
+        "\n",
         "    read_file.close()\n",
-        "        \n",
+        "\n",
         "    dict_processos = dict()\n",
         "    dict_processos['processos'] = first_20_lines\n",
-        "    \n",
+        "\n",
         "    write_file = open(\"processos20.json\", \"w\")\n",
-        "    json.dump(dict_processos, write_file, ensure_ascii=False, indent=2)    \n",
+        "    json.dump(dict_processos, write_file, ensure_ascii=False, indent=2)\n",
         "    write_file.close()\n",
         "\n",
-        "            \n",
+        "\n",
         "first_20_registers_to_json()"
       ]
     }
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "include_colab_link": true,
+      "provenance": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "display_name": "Python 3",
