--- a/TPC4/Notebook TPC4.ipynb
+++ b/TPC4/Notebook TPC4.ipynb
@@ -1,7 +1,16 @@
 {
   "cells": [
     {
-      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "view-in-github"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/joaoabreu5/PL-TPCs/blob/main/TPC4/Notebook%20TPC4.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "9oysT2Ge4dY4"
@@ -152,51 +161,56 @@
       ]
     },
     {
-      "attachments": {},
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "PgbxVsGZjPLX"
+      },
       "source": [
-        "# Funções de agregação implementadas\n",
+        "## Funções de agregação implementadas\n",
         "\n",
-        "<li><b>sum</b>: calcula a soma de todos os elementos presentes na lista;</li> <br>\n",
+        "* **sum**: calcula a soma de todos os elementos presentes na lista;\n",
         "\n",
-        "<li><b>media</b>: calcula o valor médio de todos os elementos presentes na lista;</li> <br>\n",
+        "* **media**: calcula o valor médio de todos os elementos presentes na lista;\n",
         "\n",
-        "<li><b>max</b>: calcula o valor máximo presente na lista;</li> <br>\n",
+        "* **max**: calcula o valor máximo presente na lista;\n",
         "\n",
-        "<li><b>min</b>: calcula o valor mínimo presente na lista;</li> <br>\n",
+        "* **min**: calcula o valor mínimo presente na lista;\n",
         "\n",
-        "<li><b>prod</b>: calcula o produto de todos os elementos presentes na lista;</li> <br>\n",
+        "* **prod**: calcula o produto de todos os elementos presentes na lista;\n",
         "\n",
-        "<li><b>len/length</b>: calcula o comprimento da lista;</li> <br>\n",
+        "* **len/length**: calcula o comprimento da lista;\n",
         "\n",
-        "<li><b>reverse</b>: retorna a lista organizada por ordem inversa;</li> <br>\n",
+        "* **reverse**: retorna a lista organizada por ordem inversa;\n",
         "\n",
-        "<li><b>sorted/sorted_asc</b>: retorna a lista ordenada por ordem ascendente;</li> <br>\n",
+        "* **sorted/sorted_asc**: retorna a lista ordenada por ordem ascendente;\n",
         "\n",
-        "<li><b>sorted_desc</b>: retorna a lista ordenada por ordem descendente;</li> <br>"
+        "* **sorted_desc**: retorna a lista ordenada por ordem descendente."
       ]
     },
     {
-      "attachments": {},
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "vWOuX8YYjPLY"
+      },
       "source": [
-        "# Programa implementado"
+        "## Programa implementado"
       ]
     },
     {
-      "attachments": {},
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "G_wkHRvbjPLY"
+      },
       "source": [
-        "Obs: Recomenda-se a execução do programa utilizando o ficheiro 'TPC4.py'."
+        "> Obs: Recomenda-se a execução do programa utilizando o ficheiro '**TPC4.py**'."
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "FpRwFIEDjPLZ"
+      },
       "outputs": [],
       "source": [
         "import re\n",
@@ -207,12 +221,12 @@
         "def get_json_file_path(csv_file_path):\n",
         "    fp_splited = re.split(r\"\\.\", csv_file_path)\n",
         "    json_file_path = \"\"\n",
-        "    \n",
+        "\n",
         "    if fp_splited is not None:\n",
         "        for i in range(len(fp_splited)-1):\n",
         "            json_file_path += fp_splited[i]\n",
         "        json_file_path += \".json\"\n",
-        "        \n",
+        "\n",
         "    return json_file_path\n",
         "\n",
         "\n",
@@ -221,7 +235,7 @@
         "        match = re.match(r\"^[+-]?\\d*\\.?\\d+$\", str(n))\n",
         "        if match is None:\n",
         "            return False\n",
-        "               \n",
+        "\n",
         "    return True\n",
         "\n",
         "def convert_str_list(lista):\n",
@@ -229,56 +243,56 @@
         "        lista[i] = float(lista[i])\n",
         "        if lista[i].is_integer():\n",
         "            lista[i] = int(lista[i])\n",
-        "    \n",
+        "\n",
         "    return lista\n",
         "\n",
         "def manage_functions(funcao, lista):\n",
         "    r = \"\"\n",
         "    lista_nums = is_numbers_list(lista)\n",
-        "    \n",
-        "    if lista_nums:    \n",
+        "\n",
+        "    if lista_nums:\n",
         "        if funcao == 'sum':\n",
         "            r = sum(lista)\n",
         "            if isinstance(r, float) and r.is_integer():\n",
         "                r = int(r)\n",
-        "                \n",
+        "\n",
         "        elif funcao == 'media':\n",
         "            r = sum(lista)/len(lista)\n",
         "            if isinstance(r, float) and r.is_integer():\n",
         "                r = int(r)\n",
-        "                \n",
+        "\n",
         "        elif funcao == 'max':\n",
         "            r = max(lista)\n",
         "            if isinstance(r, float) and r.is_integer():\n",
         "                r = int(r)\n",
-        "                \n",
+        "\n",
         "        elif funcao == 'min':\n",
         "            r = min(lista)\n",
         "            if isinstance(r, float) and r.is_integer():\n",
         "                r = int(r)\n",
-        "                \n",
+        "\n",
         "        elif funcao == 'prod':\n",
         "            r = prod(lista)\n",
         "            if isinstance(r, float) and r.is_integer():\n",
         "                r = int(r)\n",
-        "                \n",
+        "\n",
         "        elif funcao == 'len' or funcao == 'length':\n",
         "            r = len(lista)\n",
         "            if isinstance(r, float) and r.is_integer():\n",
         "                r = int(r)\n",
-        "                \n",
+        "\n",
         "        elif funcao == 'reverse':\n",
         "            lista.reverse()\n",
         "            r = lista\n",
-        "            \n",
+        "\n",
         "        elif funcao == 'sorted' or funcao == 'sorted_asc':\n",
         "            r = sorted(lista)\n",
-        "            \n",
+        "\n",
         "        elif funcao == 'sorted_desc':\n",
         "            r = sorted(lista, reverse=True)\n",
-        "            \n",
+        "\n",
         "    return r\n",
-        "    \n",
+        "\n",
         "def convert_csv_to_json(file_path):\n",
         "    file_read = open(file_path, \"r\")\n",
         "    i = 0\n",
@@ -286,44 +300,44 @@
         "    campos = []\n",
         "    for line in file_read:\n",
         "        val_linha = re.split(r\",(?![^{]*\\})\", line)\n",
-        "        \n",
+        "\n",
         "        if val_linha[-1][-1] == '\\n':\n",
         "            val_linha[-1] = val_linha[-1][0:-1]\n",
-        "        \n",
-        "        if i == 0:  \n",
-        "            campos = val_linha      \n",
+        "\n",
+        "        if i == 0:\n",
+        "            campos = val_linha\n",
         "        else:\n",
         "            dict_json = dict()\n",
         "            j = 0\n",
         "            while j < len(campos):\n",
         "                val = val_linha[j]\n",
-        "                \n",
+        "\n",
         "                if val is not None:\n",
         "                    match1 = re.match(r\"(?P<nome>\\w+){(?P<N>\\d+),(?P<M>\\d+)}::(?P<func>[\\w ]*[\\w]+)\", campos[j])\n",
         "                    match2 = re.match(r\"(?P<nome>\\w+){(?P<N>\\d+)}::(?P<func>[\\w ]*[\\w]+)\", campos[j])\n",
         "                    match3 = re.match(r\"(?P<nome>\\w+){(?P<N>\\d+),(?P<M>\\d+)}\", campos[j])\n",
         "                    match4 = re.match(r\"(?P<nome>\\w+){(?P<N>\\d+)}\", campos[j])\n",
-        "                    \n",
+        "\n",
         "                    if match1:\n",
         "                        N = int(match1.group('N'))\n",
-        "                        M = int(match1.group('M'))                        \n",
+        "                        M = int(match1.group('M'))\n",
         "                        aux = []\n",
         "                        for k in range(j, j+M):\n",
         "                            if val_linha[k] != \"\":\n",
         "                                aux.append(val_linha[k])\n",
-        "                        \n",
+        "\n",
         "                        if len(aux) >= N and len(aux) <= M:\n",
         "                            flag_lista_nums = is_numbers_list(aux)\n",
-        "                            if flag_lista_nums:    \n",
+        "                            if flag_lista_nums:\n",
         "                                aux = convert_str_list(aux)\n",
-        "                            \n",
+        "\n",
         "                            key = match1.group('nome') + '_' + match1.group('func')\n",
         "                            dict_json[key] = manage_functions(match1.group('func'), aux)\n",
-        "                        \n",
+        "\n",
         "                        j += M+1\n",
-        "                        \n",
+        "\n",
         "                    elif match2:\n",
-        "                        N = int(match2.group('N'))                      \n",
+        "                        N = int(match2.group('N'))\n",
         "                        aux = []\n",
         "                        for k in range(j, j+N):\n",
         "                            if val_linha[k] != \"\":\n",
@@ -331,58 +345,58 @@
         "\n",
         "                        if len(aux) == N:\n",
         "                            flag_lista_nums = is_numbers_list(aux)\n",
-        "                            if flag_lista_nums:    \n",
+        "                            if flag_lista_nums:\n",
         "                                aux = convert_str_list(aux)\n",
-        "                            \n",
+        "\n",
         "                            key = match2.group('nome') + '_' + match2.group('func')\n",
         "                            dict_json[key] = manage_functions(match2.group('func'), aux)\n",
-        "                            \n",
+        "\n",
         "                        j += N+1\n",
-        "                    \n",
+        "\n",
         "                    elif match3:\n",
         "                        N = int(match3.group('N'))\n",
-        "                        M = int(match3.group('M'))                        \n",
+        "                        M = int(match3.group('M'))\n",
         "                        aux = []\n",
         "                        for k in range(j, j+M):\n",
         "                            if val_linha[k] != \"\":\n",
         "                                aux.append(val_linha[k])\n",
-        "                        \n",
+        "\n",
         "                        if len(aux) >= N and len(aux) <= M:\n",
         "                            flag_lista_nums = is_numbers_list(aux)\n",
-        "                            if flag_lista_nums:    \n",
+        "                            if flag_lista_nums:\n",
         "                                aux = convert_str_list(aux)\n",
-        "                            \n",
+        "\n",
         "                            key = match3.group('nome')\n",
         "                            dict_json[key] = aux\n",
-        "                            \n",
+        "\n",
         "                        j += M+1\n",
-        "                    \n",
+        "\n",
         "                    elif match4:\n",
-        "                        N = int(match4.group('N'))                      \n",
+        "                        N = int(match4.group('N'))\n",
         "                        aux = []\n",
         "                        for k in range(j, j+N):\n",
         "                            if val_linha[k] != \"\":\n",
         "                                aux.append(val_linha[k])\n",
-        "                        \n",
+        "\n",
         "                        if len(aux) == N:\n",
         "                            flag_lista_nums = is_numbers_list(aux)\n",
-        "                            if flag_lista_nums:    \n",
+        "                            if flag_lista_nums:\n",
         "                                aux = convert_str_list(aux)\n",
-        "                            \n",
+        "\n",
         "                            key = match4.group('nome')\n",
         "                            dict_json[key] = aux\n",
-        "                        \n",
+        "\n",
         "                        j += N+1\n",
-        "                    \n",
+        "\n",
         "                    else:\n",
-        "                        dict_json[campos[j]] = val      \n",
+        "                        dict_json[campos[j]] = val\n",
         "                        j += 1\n",
-        "                        \n",
-        "            lista_dict_json.append(dict_json)                 \n",
+        "\n",
+        "            lista_dict_json.append(dict_json)\n",
         "        i += 1\n",
-        "        \n",
+        "\n",
         "    file_read.close()\n",
-        "    \n",
+        "\n",
         "    file_write = open(get_json_file_path(file_path), \"w\")\n",
         "    json.dump(lista_dict_json, file_write, ensure_ascii=False, indent=2)\n",
         "    file_write.close()\n",
@@ -401,7 +415,9 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "include_colab_link": true,
+      "provenance": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "display_name": "Python 3",
