--- a/TPC5/Notebook TPC5.ipynb
+++ b/TPC5/Notebook TPC5.ipynb
@@ -1,7 +1,16 @@
 {
   "cells": [
     {
-      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "view-in-github"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/joaoabreu5/PL-TPCs/blob/main/TPC5/Notebook%20TPC5.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "6WTj_7jF_UDZ"
@@ -56,19 +65,22 @@
       ]
     },
     {
-      "attachments": {},
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "DyXOo-IxjkT7"
+      },
       "source": [
-        "# Programa implementado\n",
+        "## Programa implementado\n",
         "\n",
-        "Obs: Recomenda-se a execução do programa utilizando o ficheiro 'TPC5.py'."
+        "> Obs: Recomenda-se a execução do programa utilizando o ficheiro '**TPC5.py**'."
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "g1fzL9iXjkT8"
+      },
       "outputs": [],
       "source": [
         "import re\n",
@@ -79,7 +91,7 @@
         "    eur = int(saldo)\n",
         "    return str(eur) + 'e' + str(cent) + 'c'\n",
         "\n",
-        "  \n",
+        "\n",
         "def soma_moedas(lista_moedas):\n",
         "    valor = Decimal('0')\n",
         "    moedas_invalidas = []\n",
@@ -88,45 +100,45 @@
         "    for moeda in lista_moedas:\n",
         "        match_moeda = True\n",
         "        moeda = moeda.strip()\n",
-        "        \n",
+        "\n",
         "        if i == len(lista_moedas) - 1:\n",
         "            match_moeda = re.match(r\"([0-9a-zA-Z]+)\", moeda)\n",
         "            if match_moeda is not None:\n",
         "                moeda = match_moeda.group(1)\n",
-        "            \n",
+        "\n",
         "        if match_moeda is not None:\n",
         "            moeda_l = moeda.lower()\n",
-        "            \n",
+        "\n",
         "            if moeda_l == \"1c\":\n",
         "                valor += Decimal('0.01')\n",
-        "                        \n",
+        "\n",
         "            elif moeda_l == \"2c\":\n",
         "                valor += Decimal('0.02')\n",
-        "                \n",
+        "\n",
         "            elif moeda_l == \"5c\":\n",
         "                valor += Decimal('0.05')\n",
-        "                \n",
+        "\n",
         "            elif moeda_l == \"10c\":\n",
         "                valor += Decimal('0.10')\n",
-        "                \n",
+        "\n",
         "            elif moeda_l == \"20c\":\n",
         "                valor += Decimal('0.20')\n",
-        "                \n",
+        "\n",
         "            elif moeda_l == \"50c\":\n",
         "                valor += Decimal('0.50')\n",
-        "                \n",
+        "\n",
         "            elif moeda_l == \"1e\":\n",
         "                valor += Decimal('1')\n",
-        "                \n",
+        "\n",
         "            elif moeda_l == \"2e\":\n",
         "                valor += Decimal('2')\n",
-        "                \n",
+        "\n",
         "            elif moeda not in moedas_invalidas:\n",
         "                    moedas_invalidas.append(moeda)\n",
-        "        \n",
+        "\n",
         "        elif moeda not in moedas_invalidas:\n",
         "                    moedas_invalidas.append(moeda)\n",
-        "    \n",
+        "\n",
         "        i += 1\n",
         "\n",
         "    return (valor, moedas_invalidas)\n",
@@ -137,14 +149,14 @@
         "\n",
         "    troco_cent = int(troco * 100)\n",
         "    moedas_troco = dict()\n",
-        "    \n",
+        "\n",
         "    for moeda, valor_cent in dict_moedas.items():\n",
         "        num_moedas = troco_cent // valor_cent\n",
-        "        \n",
+        "\n",
         "        if num_moedas > 0:\n",
         "            moedas_troco[moeda] = num_moedas\n",
         "            troco_cent -= num_moedas * valor_cent\n",
-        "        \n",
+        "\n",
         "    return moedas_troco\n",
         "\n",
         "\n",
@@ -152,7 +164,7 @@
         "    if troco > 0:\n",
         "        dict_moedas_troco = moedas_troco(troco)\n",
         "        print('maq: \"troco = ', end='')\n",
-        "        \n",
+        "\n",
         "        i = 0\n",
         "        for moeda, num in dict_moedas_troco.items():\n",
         "            if i == 0:\n",
@@ -160,18 +172,18 @@
         "            else:\n",
         "                print(f', {num}x{moeda}', end='')\n",
         "            i += 1\n",
-        "            \n",
+        "\n",
         "        print('; Volte sempre!\"')\n",
-        "        \n",
+        "\n",
         "    elif troco == 0:\n",
         "        print('maq: \"troco = ' + saldo_to_string(troco) + '; Volte sempre!\"')\n",
         "\n",
-        "      \n",
+        "\n",
         "def cabine_telefonica():\n",
         "    estado = True\n",
         "    on = False\n",
         "    saldo = Decimal('0')\n",
-        "    \n",
+        "\n",
         "    while estado:\n",
         "        line = input()\n",
         "        if re.match(r\"(?i)\\s*LEVANTAR\\b\", line):\n",
@@ -180,7 +192,7 @@
         "            else:\n",
         "                print('maq: \"O auscultador já se encontra levantado.\"')\n",
         "            on = True\n",
-        "            \n",
+        "\n",
         "        elif re.match(r\"(?i)\\s*POUSAR\\b\", line):\n",
         "            if on:\n",
         "                on = False\n",
@@ -188,40 +200,40 @@
         "                imprime_troco(saldo)\n",
         "            else:\n",
         "                print('maq: \"O auscultador do telefone não foi levantado. Queira levantar o auscultador do mesmo!\"')\n",
-        "            \n",
+        "\n",
         "        elif re.match(r\"(?i)\\s*MOEDA\\b\", line):\n",
         "            if on:\n",
         "                ms = re.match(r\"(?i)\\s*MOEDA\\b\", line).span()\n",
         "                string_moedas = line[ms[1]:]\n",
-        "                \n",
+        "\n",
         "                lista_moedas = []\n",
         "                if string_moedas.strip() != \"\":\n",
         "                    lista_moedas = re.split(r\",\", string_moedas)\n",
         "                else:\n",
         "                    print('maq: \"Não introduziu um quaisquer moedas. Queira introduzir moedas!\"')\n",
-        "                \n",
+        "\n",
         "                soma, moedas_invalidas = soma_moedas(lista_moedas)\n",
         "                saldo += soma\n",
-        "                \n",
+        "\n",
         "                if len(moedas_invalidas) == 0:\n",
-        "                    print('maq: \"saldo = ' + saldo_to_string(saldo) + '\"')                \n",
-        "                \n",
+        "                    print('maq: \"saldo = ' + saldo_to_string(saldo) + '\"')\n",
+        "\n",
         "                else:\n",
         "                    print('maq: \"', end='')\n",
         "                    for moeda in moedas_invalidas:\n",
         "                        print(moeda + ' - moeda inválida; ', end='')\n",
-        "                    print('saldo = ' + saldo_to_string(saldo) + '\"')        \n",
-        "                    \n",
+        "                    print('saldo = ' + saldo_to_string(saldo) + '\"')\n",
+        "\n",
         "            else:\n",
         "                print('maq: \"O auscultador do telefone não foi levantado. Queira levantar o auscultador do mesmo!\"')\n",
-        "                \n",
+        "\n",
         "        elif re.match(r\"(?i)\\s*T *=\", line):\n",
         "            if on:\n",
         "                num = re.search(r\"(?i)\\s*T *= *([0-9]+)\", line)\n",
-        "                \n",
+        "\n",
         "                if num is not None:\n",
         "                    num = num.group(1)\n",
-        "                    \n",
+        "\n",
         "                    if len(num) == 9:\n",
         "                        if num[0] == \"2\":\n",
         "                            if saldo >= 0.25:\n",
@@ -229,17 +241,17 @@
         "                                print('maq: \"saldo = ' + saldo_to_string(saldo) + '\"')\n",
         "                            else:\n",
         "                                print('maq: \"Saldo insuficiente. Custo da chamada = 0e25c.\"')\n",
-        "                            \n",
+        "\n",
         "                        elif num[:3] == \"800\":\n",
         "                            print('maq: \"saldo = ' + saldo_to_string(saldo) + '\"')\n",
-        "                        \n",
+        "\n",
         "                        elif num[:3] == \"808\":\n",
         "                            if saldo >= 0.10:\n",
         "                                saldo -= Decimal('0.10')\n",
         "                                print('maq: \"saldo = ' + saldo_to_string(saldo) + '\"')\n",
         "                            else:\n",
         "                                print('maq: \"Saldo insuficiente. Custo da chamada = 0e10c.\"')\n",
-        "                        \n",
+        "\n",
         "                        else:\n",
         "                            print('maq: \"Esse número não é permitido neste telefone. Queira discar novo número!\"')\n",
         "\n",
@@ -249,22 +261,22 @@
         "                            print('maq: \"saldo = ' + saldo_to_string(saldo) + '\"')\n",
         "                        else:\n",
         "                            print('maq: \"Saldo insuficiente. Custo da chamada = 1e50c.\"')\n",
-        "                                \n",
+        "\n",
         "                    else:\n",
         "                        print('maq: \"Esse número não é permitido neste telefone. Queira discar novo número!\"')\n",
-        "                \n",
+        "\n",
         "                else:\n",
         "                    print('maq: \"Não introduziu um número de telefone. Queira discar um número!\"')\n",
-        "                    \n",
+        "\n",
         "            else:\n",
         "                print('maq: \"O auscultador do telefone não foi levantado. Queira levantar o auscultador do mesmo!\"')\n",
-        "            \n",
+        "\n",
         "        elif re.match(r\"(?i)\\s*ABORTAR\\b\", line):\n",
         "            if on:\n",
         "                imprime_troco(saldo)\n",
         "            on = False\n",
         "            estado = False\n",
-        "        \n",
+        "\n",
         "        else:\n",
         "            print('maq: \"Comando não suportado. Queira introduzir um novo comando!\"')\n",
         "\n",
@@ -275,7 +287,9 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "include_colab_link": true,
+      "provenance": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "display_name": "Python 3",
